# yamldeco

./: .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml  sandbox.py
docs/: README_JP.md  coding_rule.md  for_developers.md  pyproject_explain.toml
src/: cli.py
src/unused/: cli.py  decoModule.py
src/yamldeco/: __init__.py  decoModule.py
tests/: sandbox.py  test_module.py
tests/autoDetect/unittest/: expected.yaml
tests/autoDetect/unittest/in/: case01.yaml
tests/decorate/unittest/exp/: case01.yaml
tests/decorate/unittest/in/: case02.yaml
tests/unit/: README.md  file_generator.py  original_test.py  pytest_heavy_template.py  pytest_light_template.py
