# 変数の詳細は<>の中に記述する。
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = <{@Summ: pypi上でのproject名, @Type: String}>
version = "0.1.0"
authors = [
  { name="masaniki", email="masaniki.software@gmail.com" },
]
description = <{@Summ: projectの詳細を記述する。, @Desc: homepageではpip installの下に記述される, @Type: String}>
dependencies = <{@Summ: packageの依存性を記述する, @Type: pypi上のproject名(str型)のList}>
readme = "README.md"
requires-python = ">=3.9"
classifiers = <{@Summ:PyPIが定める分類名, @Type:Enum型List, @Disc:"https://pypi.org/classifiers/"}>
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = <{@Summ: PyPI上の検索に引っかかるためのkeyword., @Desc:homepageのmetadataの所に記載される。, @Type: String型Lsit}>

[project.scripts]
<{@Summ: cli applicationのcommand名, @Type:String}> = "<srcからの相対path>:<cliによって実行する関数名>"

[project.urls]
Homepage = <{@Summ: projectのhomepage, @Type: URL, @Feat: 主に個人のhomepage}>
Repository = <{@Summ: source codeの公開場所, @Type: URL, @Feat: 主にgithub}>
Documentation = <{@Summ: documetの場所, @Type: URL, @Feat: 主にgithub}>
Issues = <{@Summ: 問題点を指摘する場所, @Type: URL, @Feat: 主にgithub}>
