# 変数の詳細は<>の中に記述する。
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "yamldeco
version = "0.1.0"
authors = [
  { name="masaniki", email="masaniki.software@gmail.com" },
]
description = "This is a library for adding descriptions to YAML."
dependencies = ["PyYAML"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Natural Language :: Japanese",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Topic :: Documentation",
]
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = [
  "YAML",
  "CLI",
  "documentation"
]

[project.scripts]
yamldeco = "cli:main"

[project.urls]
Homepage = <{@Summ: projectのhomepage, @Type: URL, @Feat: 主に個人のhomepage}>
Repository = <{@Summ: source codeの公開場所, @Type: URL, @Feat: 主にgithub}>
Documentation = <{@Summ: documetの場所, @Type: URL, @Feat: 主にgithub}>
Issues = <{@Summ: 問題点を指摘する場所, @Type: URL, @Feat: 主にgithub}>
