# 変数の詳細は<>の中に記述する。
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "yamldeco"
version = "0.1.4"
authors = [
  { name="masaniki", email="masaniki.software@gmail.com" },
]
description = "This is a library for adding descriptions to YAML."
dependencies = ["PyYAML"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Natural Language :: Japanese",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Topic :: Documentation",
]
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = [
  "YAML",
  "CLI",
  "documentation"
]

[project.scripts]
yamldeco = "yamldeco:main"

[project.urls]
Repository = "https://github.com/masaniki/yamldeco"
Documentation = "https://github.com/masaniki/yamldeco/tree/master/docs"
Issues = "https://github.com/masaniki/yamldeco/issues"
